--- a/user-time-react-project/src/App.css
+++ b/user-time-react-project/src/App.css
@@ -2,6 +2,13 @@
 
 :root {
   --bg-primary-color: #F5F0E7;
+  --primary-font-family: "Sour Gummy", sans-serif;
+}
+
+body {
+  font-family: var(--primary-font-family);
+  margin: 0;
+  padding: 0;
 }
 
 
